Fixing server API integration tests
