# server/openapi.yaml
@@ -158,9 +158,9 @@ paths:
             $ref: '#/definitions/proposalUpdate'
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -383,9 +383,9 @@ paths:
                   Id of the user to remove as administrator from this role
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -474,9 +474,9 @@ paths:
                 description: Id of the user to remove as member to this role
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -565,9 +565,9 @@ paths:
                 description: Id of the user to remove as owner from this role
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -656,9 +656,9 @@ paths:
                 description: Id of the task to remove from this role
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -875,9 +875,9 @@ paths:
                 description: Id of the user to remove as an administrator
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -966,9 +966,9 @@ paths:
                 description: Id of the user to remove as an owner
       responses:
         '200':
-          description: Generic success response
+          description: Success response with proposal id
           schema:
-            $ref: '#/definitions/success'
+            $ref: '#/definitions/proposalId'
         '400':
           description: Response for a bad request
           schema:
@@ -1008,7 +1008,9 @@ paths:
           schema:
             properties:
               data:
-                $ref: '#/definitions/user'
+                type: array
+                items:
+                  $ref: '#/definitions/user'
               head:
                 $ref: '#/definitions/head'
               link:
@@ -1521,7 +1523,6 @@ definitions:
     required:
       - id
       - name
-      - managers
     properties:
       id:
         type: string
@@ -1531,12 +1532,10 @@ definitions:
         type: string
         description: Name of the user
         example: Susan Susanson
-      managers:
-        type: array
-        description: Ordered list of manager, manager's manager, etc
-        items:
-          type: string
-          example: 02a06f344c6074e4bd0ca8a2abe45ee6ec92bf9cdd7b7a67c804350bfff4d4a8c0
+      manager:
+        type: string
+        description: Id of the manager
+        example: 02a06f344c6074e4bd0ca8a2abe45ee6ec92bf9cdd7b7a67c804350bfff4d4a8c0
       subordinates:
         type: array
         description: Unordered list of subordinates
@@ -1577,7 +1576,6 @@ definitions:
     type: object
     required:
       - name
-      - manager
       - password
     properties:
       name:
@@ -1686,7 +1684,6 @@ definitions:
         type: string
         description: Status of the proposal
         enum:
-          - OPEN
           - APPROVED
           - REJECTED
       reason:
@@ -1704,7 +1701,7 @@ definitions:
   block:
     properties:
       num:
-        type: integer
+        type: string
         example: 123
       id:
         type: string
@@ -1808,7 +1805,7 @@ definitions:
       message:
         type: string
   success:
-    description: Generic success response with a code and message
+    description: Success response with proposal id with a code and message
     type: object
     required:
       - code
